[package]
name = "network-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ipv4"
path = "src/main.rs"

[[bin]]
name = "ipv6"
path = "src/main_ipv6.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smoltcp = { path="../smoltcp", features = ["std", "medium-ethernet", "medium-ip", "phy-tuntap_interface", "proto-ipv4", "proto-dhcpv4", "socket-raw", "async"] }
log = "0.4"
env_logger = "0.10"
getopts = "0.2"
rand = "0.8"
url = "2.0"
byteorder = "1.4.3"

[features]
log = []
default = []
